finish experience section

--- a/index2.html
+++ b/index2.html
@@ -631,42 +631,38 @@
               <div class="st-resume-timeline-wrap">
                 <div class="st-resume-timeline">
                   <h3 class="st-resume-timeline-title">
-                    Senior UX/UI Designer
+                    Junior Frontend Web Developer 
                   </h3>
                   <div class="st-resume-timeline-duration">
-                    Jan 2020 - Present
+                    Oct 2022 - Jan 2023
                   </div>
                   <h4 class="st-resume-timeline-subtitle">
-                    Bergnaum, Hills and Howe
+                    Impartner Software
                   </h4>
                   <div class="st-resume-timeline-text">
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                      Nunc ligula nulla, tincidunt id faucibus sed, suscipit
-                      feugiat turpis.
+                      Customized frontends for 600+ client web portals using .Net MVC and Angular.  
                     </p>
                   </div>
                 </div>
                 <!-- st-resume-timeline -->
                 <div class="st-height-b50 st-height-lg-b30"></div>
                 <div class="st-resume-timeline">
-                  <h3 class="st-resume-timeline-title">Product Designer</h3>
+                  <h3 class="st-resume-timeline-title">Fulltime Software Engineering Student</h3>
                   <div class="st-resume-timeline-duration">
-                    Jan 2016 - December 2019
+                    Jan 2022 - June 2022
                   </div>
                   <h4 class="st-resume-timeline-subtitle">
-                    Langosh, Sipes and Raynor
+                    App Academy, New York
                   </h4>
                   <div class="st-resume-timeline-text">
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                      Nunc ligula nulla, tincidunt id faucibus sed, suscipit
-                      feugiat turpis.
+                      Created multiple fullstack web apps with a variety of technologies and a focus of Ruby on Rails, Node/Express, and React.   
                     </p>
                   </div>
                 </div>
                 <!-- st-resume-timeline -->
-                <div class="st-height-b50 st-height-lg-b30"></div>
+                <!-- <div class="st-height-b50 st-height-lg-b30"></div>
                 <div class="st-resume-timeline">
                   <h3 class="st-resume-timeline-title">UI/UX Designer</h3>
                   <div class="st-resume-timeline-duration">
@@ -682,7 +678,7 @@
                       feugiat turpis.
                     </p>
                   </div>
-                </div>
+                </div> -->
                 <!-- st-resume-timeline -->
               </div>
             </div>
@@ -911,7 +907,7 @@
     <!-- End Portfolio Seciton -->
 
     <!-- Start Review Seciton -->
-    <section class="st-dark-bg">
+    <!-- <section class="st-dark-bg">
       <div class="st-height-b100 st-height-lg-b80"></div>
       <div class="container">
         <div class="st-section-heading st-style1">
@@ -921,7 +917,6 @@
         <div class="st-height-b25 st-height-lg-b25"></div>
       </div>
 
-      <!-- Reviews Container -->
 
       <div class="container">
         <div class="st-slider st-style1 st-reviews-wrap">
@@ -966,7 +961,6 @@
                   </div>
                 </div>
               </div>
-              <!-- .slick-slide-in -->
 
               <div class="slick-slide-in">
                 <div
@@ -997,7 +991,6 @@
                   </div>
                 </div>
               </div>
-              <!-- .slick-slide-in -->
 
               <div class="slick-slide-in">
                 <div
@@ -1028,7 +1021,6 @@
                   </div>
                 </div>
               </div>
-              <!-- .slick-slide-in -->
 
               <div class="slick-slide-in">
                 <div
@@ -1057,7 +1049,7 @@
                   </div>
                 </div>
               </div>
-              <!-- .slick-slide-in -->
+              
 
               <div class="slick-slide-in">
                 <div
@@ -1088,7 +1080,6 @@
                   </div>
                 </div>
               </div>
-              <!-- .slick-slide-in -->
 
               <div class="slick-slide-in">
                 <div
@@ -1119,14 +1110,10 @@
                   </div>
                 </div>
               </div>
-              <!-- .slick-slide-in -->
             </div>
           </div>
-          <!-- .slick-container -->
           <div class="pagination st-style1 st-flex st-hidden"></div>
-          <!-- If dont need Pagination then add class .st-hidden -->
           <div class="swipe-arrow st-style1 st-hidden">
-            <!-- If dont need navigation then add class .st-hidden -->
             <div class="slick-arrow-left">
               <i class="fa fa-chevron-left"></i>
             </div>
@@ -1135,14 +1122,13 @@
             </div>
           </div>
         </div>
-        <!-- .st-slider -->
       </div>
       <div class="st-height-b100 st-height-lg-b80"></div>
-    </section>
+    </section> -->
     <!-- End Review Seciton -->
 
     <!-- Start Blog Seciton -->
-    <section id="blog">
+    <!-- <section id="blog">
       <div class="st-height-b100 st-height-lg-b80"></div>
       <div class="container">
         <div class="st-section-heading st-style1">
@@ -1152,7 +1138,6 @@
         <div class="st-height-b25 st-height-lg-b25"></div>
       </div>
 
-      <!-- Latest News Container -->
 
       <div class="container">
         <div class="st-slider st-style2">
@@ -1195,7 +1180,6 @@
                   </div>
                 </div>
               </div>
-              <!-- .slick-slide-in -->
               <div class="slick-slide-in">
                 <div class="st-post-single st-style1">
                   <a href="blog-details.html" class="st-post-thumb st-zoom">
@@ -1220,7 +1204,6 @@
                   </div>
                 </div>
               </div>
-              <!-- .slick-slide-in -->
               <div class="slick-slide-in">
                 <div class="st-post-single st-style1">
                   <a href="blog-details.html" class="st-post-thumb st-zoom">
@@ -1245,7 +1228,6 @@
                   </div>
                 </div>
               </div>
-              <!-- .slick-slide-in -->
               <div class="slick-slide-in">
                 <div class="st-post-single st-style1">
                   <a href="blog-details.html" class="st-post-thumb st-zoom">
@@ -1271,7 +1253,6 @@
                   </div>
                 </div>
               </div>
-              <!-- .slick-slide-in -->
               <div class="slick-slide-in">
                 <div class="st-post-single st-style1">
                   <a href="blog-details.html" class="st-post-thumb st-zoom">
@@ -1296,7 +1277,6 @@
                   </div>
                 </div>
               </div>
-              <!-- .slick-slide-in -->
               <div class="slick-slide-in">
                 <div class="st-post-single st-style1">
                   <a href="blog-details.html" class="st-post-thumb st-zoom">
@@ -1321,17 +1301,13 @@
                   </div>
                 </div>
               </div>
-              <!-- .slick-slide-in -->
             </div>
           </div>
-          <!-- .slick-container -->
           <div class="pagination st-style1 st-flex st-hidden"></div>
-          <!-- If dont need Pagination then add class .st-hidden -->
         </div>
-        <!-- .st-slider -->
       </div>
       <div class="st-height-b95 st-height-lg-b75"></div>
-    </section>
+    </section> -->
     <!-- End Blog Seciton -->
 
     <!-- Start Contact Seciton -->
@@ -1349,7 +1325,7 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-lg-6">
+          <!-- <div class="col-lg-6">
             <h3 class="st-contact-title">Just say Hello</h3>
             <div id="st-alert"></div>
             <form
@@ -1404,67 +1380,53 @@
                 Send message
               </button>
             </form>
-          </div>
+          </div> -->
           <div class="st-height-b0 st-height-lg-b30"></div>
 
           <div class="col-lg-6">
             <div class="st-height-b0 st-height-lg-b40"></div>
             <h3 class="st-contact-title">Contact Info</h3>
             <div class="st-contact-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-              ligula nulla tincidunt id faucibus sed suscipit feugiat.
+              I'm always interested in new opportunities and collaborations, so don't hesitate to get in touch!
             </div>
             <div class="st-contact-info-wrap">
               <div class="st-single-contact-info">
                 <i class="fas fa-envelope"></i>
                 <div class="st-single-info-details">
                   <h4>Email</h4>
-                  <a href="#">devis@example.com</a>
-                  <a href="#">info@support.com</a>
+                  <a href="#">domswaby@gmail.com</a>
                 </div>
               </div>
               <div class="st-single-contact-info">
                 <i class="fas fa-phone-alt"></i>
                 <div class="st-single-info-details">
                   <h4>Phone</h4>
-                  <span>+1 876-369-9009</span>
-                  <span>+1 213-519-1786</span>
+                  <span>+1 646-400-3725</span>
                 </div>
               </div>
               <div class="st-single-contact-info">
                 <i class="fas fa-map-marker-alt"></i>
                 <div class="st-single-info-details">
-                  <h4>Address</h4>
+                  <h4>Location</h4>
                   <span
-                    >2661 High Meadow Lane Bear Creek, <br />Olancha, KY
-                    93544</span
+                    >New York, New York
+                    </span
                   >
                 </div>
               </div>
               <div class="st-social-info">
                 <div class="st-social-text">
-                  Visite my social profile and get connected
+                  Visit my social profiles and get connected
                 </div>
                 <div class="st-social-link">
-                  <a href="#" class="st-social-btn active">
+                  <a href="https://github.com/domswaby" class="st-social-btn active" target="_blank">
                     <span class="st-social-icon"
-                      ><i class="fab fa-dribbble"></i
+                      ><i class="fab fa-github"></i
                     ></span>
-                    <span class="st-icon-name">Dribbble</span>
+                    <span class="st-icon-name">Github</span>
                   </a>
-                  <a href="#" class="st-social-btn">
-                    <span class="st-social-icon"
-                      ><i class="fab fa-behance"></i
-                    ></span>
-                    <span class="st-icon-name">Behance</span>
-                  </a>
-                  <a href="#" class="st-social-btn">
-                    <span class="st-social-icon"
-                      ><i class="fab fa-twitter"></i
-                    ></span>
-                    <span class="st-icon-name">Twitter</span>
-                  </a>
-                  <a href="#" class="st-social-btn">
+                
+                  <a href="https://www.linkedin.com/in/dominic-swaby-5b43681a5/" class="st-social-btn" target="_blank">
                     <span class="st-social-icon"
                       ><i class="fab fa-linkedin"></i
                     ></span>
