finish education section

--- a/index2.html
+++ b/index2.html
@@ -697,15 +697,13 @@
               <div class="st-resume-timeline-wrap">
                 <div class="st-resume-timeline">
                   <h3 class="st-resume-timeline-title">
-                    Master of Computer Science
+                    Master of Arts - Philosophy
                   </h3>
-                  <div class="st-resume-timeline-duration">2015 - 2016</div>
-                  <h4 class="st-resume-timeline-subtitle">University of XYZ</h4>
+                  <div class="st-resume-timeline-duration">2012 - 2013</div>
+                  <h4 class="st-resume-timeline-subtitle">California State University, Los Angeles</h4>
                   <div class="st-resume-timeline-text">
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                      Nunc ligula nulla, tincidunt id faucibus sed, suscipit
-                      feugiat turpis.
+                      Studied and researched modern analytic philsophy with a focus on Ethics and the Philsophy of Mind.  
                     </p>
                   </div>
                 </div>
@@ -713,20 +711,18 @@
                 <div class="st-height-b50 st-height-lg-b30"></div>
                 <div class="st-resume-timeline">
                   <h3 class="st-resume-timeline-title">
-                    Bachelor of Computer Science
+                    Bachelor of Science - Philosophy / Psychology
                   </h3>
-                  <div class="st-resume-timeline-duration">2010 - 2014</div>
-                  <h4 class="st-resume-timeline-subtitle">University of ABC</h4>
+                  <div class="st-resume-timeline-duration">2004 - 2009</div>
+                  <h4 class="st-resume-timeline-subtitle">The Ohio State University</h4>
                   <div class="st-resume-timeline-text">
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                      Nunc ligula nulla, tincidunt id faucibus sed, suscipit
-                      feugiat turpis.
+                      Studied psychology and philosophy, specializing in cognitive psychology, logic, and the philosophy of mind.
                     </p>
                   </div>
                 </div>
                 <!-- st-resume-timeline -->
-                <div class="st-height-b50 st-height-lg-b30"></div>
+                <!-- <div class="st-height-b50 st-height-lg-b30"></div>
                 <div class="st-resume-timeline">
                   <h3 class="st-resume-timeline-title">
                     Diploma in Computer Science
@@ -740,7 +736,7 @@
                       feugiat turpis.
                     </p>
                   </div>
-                </div>
+                </div> -->
                 <!-- st-resume-timeline -->
               </div>
             </div>
