finish skills section

--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@
                   <li>
                     <a href="#portfolio" class="st-smooth-move">Portfolio</a>
                   </li>
-                  <li><a href="#blog" class="st-smooth-move">Blog</a></li>
+                  <!-- <li><a href="#blog" class="st-smooth-move">Blog</a></li> -->
                   <li><a href="#contact" class="st-smooth-move">Contact</a></li>
                 </ul>
                 <div class="st-hero-btn">
@@ -68,11 +68,11 @@
           </p>
           <div class="st-hero-social-links">
             <a
-              href="https://www.facebook.com/profile.php?id=100017531773580"
+              href="https://www.linkedin.com/in/dominic-swaby-5b43681a5/"
               target="_blank"
               class="st-social-btn"
             >
-              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-linkedin"></i>
             </a>
 
             <a
@@ -476,17 +476,10 @@
             <div class="st-skill-wrap">
               <div class="st-skill-heading">
                 <h2 class="st-skill-title">
-                  All the skills that I have in that field of work are
-                  mentioned.
+                  Here's a summary of my web dev skills.
                 </h2>
                 <div class="st-skill-subtitle">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod tempor invidunt ut labore et dolore magna
-                  aliquyam erat, sed diam voluptua. At vero eos et accusam et
-                  justo duo dolores. <br /><br />Stet clita kasd gubergren, no
-                  sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem
-                  ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-                  nonumy eirmod tempor invidunt.
+                  I have experience in and have created web apps using a variety of stacks with special focus on ruby on rails and node in the backend and react in the frontend. <br /><br />I'm also highly skilled in SQL in addition to non-relational databases and database design.
                 </div>
               </div>
               <!-- .st-skill-heading -->
@@ -500,7 +493,7 @@
             <div class="st-progressbar-wrap">
               <div class="st-single-progressbar">
                 <div class="st-progressbar-heading">
-                  <h3 class="st-progressbar-title">Photoshop</h3>
+                  <h3 class="st-progressbar-title">Ruby on Rails</h3>
                   <div
                     class="st-progressbar-percentage wow fadeInLeft"
                     data-wow-duration="1.5s"
@@ -517,7 +510,24 @@
               <div class="st-height-b30 st-height-lg-b20"></div>
               <div class="st-single-progressbar">
                 <div class="st-progressbar-heading">
-                  <h3 class="st-progressbar-title">Motion Graphic</h3>
+                  <h3 class="st-progressbar-title">Node / Express</h3>
+                  <div
+                    class="st-progressbar-percentage wow fadeInLeft"
+                    data-wow-duration="1.5s"
+                    data-wow-delay="0.5s"
+                  >
+                    90%
+                  </div>
+                </div>
+                <div class="st-progressbar" data-progress="90">
+                  <div class="st-progressbar-in wow fadeInLeft"></div>
+                </div>
+              </div>
+              <!-- .st-single-progressbar -->
+              <div class="st-height-b30 st-height-lg-b20"></div>
+              <div class="st-single-progressbar">
+                <div class="st-progressbar-heading">
+                  <h3 class="st-progressbar-title">Python / Flask</h3>
                   <div
                     class="st-progressbar-percentage wow fadeInLeft"
                     data-wow-duration="1.5s"
@@ -534,24 +544,7 @@
               <div class="st-height-b30 st-height-lg-b20"></div>
               <div class="st-single-progressbar">
                 <div class="st-progressbar-heading">
-                  <h3 class="st-progressbar-title">Adobe XD</h3>
-                  <div
-                    class="st-progressbar-percentage wow fadeInLeft"
-                    data-wow-duration="1.5s"
-                    data-wow-delay="0.5s"
-                  >
-                    90%
-                  </div>
-                </div>
-                <div class="st-progressbar" data-progress="90">
-                  <div class="st-progressbar-in wow fadeInLeft"></div>
-                </div>
-              </div>
-              <!-- .st-single-progressbar -->
-              <div class="st-height-b30 st-height-lg-b20"></div>
-              <div class="st-single-progressbar">
-                <div class="st-progressbar-heading">
-                  <h3 class="st-progressbar-title">UX Design</h3>
+                  <h3 class="st-progressbar-title">HTML and CSS</h3>
                   <div
                     class="st-progressbar-percentage wow fadeInLeft"
                     data-wow-duration="1.5s"
@@ -568,24 +561,7 @@
               <div class="st-height-b30 st-height-lg-b20"></div>
               <div class="st-single-progressbar">
                 <div class="st-progressbar-heading">
-                  <h3 class="st-progressbar-title">HTML</h3>
-                  <div
-                    class="st-progressbar-percentage wow fadeInLeft"
-                    data-wow-duration="1.5s"
-                    data-wow-delay="0.5s"
-                  >
-                    80%
-                  </div>
-                </div>
-                <div class="st-progressbar" data-progress="80">
-                  <div class="st-progressbar-in wow fadeInLeft"></div>
-                </div>
-              </div>
-              <!-- .st-single-progressbar -->
-              <div class="st-height-b30 st-height-lg-b20"></div>
-              <div class="st-single-progressbar">
-                <div class="st-progressbar-heading">
-                  <h3 class="st-progressbar-title">Digital Marketing</h3>
+                  <h3 class="st-progressbar-title">SQL / Relational DBs</h3>
                   <div
                     class="st-progressbar-percentage wow fadeInLeft"
                     data-wow-duration="1.5s"
@@ -595,6 +571,23 @@
                   </div>
                 </div>
                 <div class="st-progressbar" data-progress="90">
+                  <div class="st-progressbar-in wow fadeInLeft"></div>
+                </div>
+              </div>
+              <!-- .st-single-progressbar -->
+              <div class="st-height-b30 st-height-lg-b20"></div>
+              <div class="st-single-progressbar">
+                <div class="st-progressbar-heading">
+                  <h3 class="st-progressbar-title">Non-relational DBs</h3>
+                  <div
+                    class="st-progressbar-percentage wow fadeInLeft"
+                    data-wow-duration="1.5s"
+                    data-wow-delay="0.5s"
+                  >
+                    80%
+                  </div>
+                </div>
+                <div class="st-progressbar" data-progress="80">
                   <div class="st-progressbar-in wow fadeInLeft"></div>
                 </div>
               </div>
