finish portfolio section

--- a/index2.html
+++ b/index2.html
@@ -745,8 +745,8 @@
       <div class="st-height-b100 st-height-lg-b80"></div>
       <div class="container">
         <div class="st-section-heading st-style1">
-          <h4 class="st-section-heading-title">PORTFOLIOS</h4>
-          <h2 class="st-section-heading-subtitle">PORTFOLIOS</h2>
+          <h4 class="st-section-heading-title">PORTFOLIO</h4>
+          <h2 class="st-section-heading-subtitle">PORTFOLIO</h2>
         </div>
         <div class="st-height-b25 st-height-lg-b25"></div>
       </div>
@@ -756,19 +756,19 @@
             <div class="st-portfolio-single st-style1 st-lightgallery">
               <div class="st-portfolio-item">
                 <a
-                  href="assets/img/portfolio/portfolio1_lg.jpg"
+                  href="assets/img/hanzi_flashcard_square.png"
                   class="st-portfolio st-zoom st-lightbox-item"
                 >
                   <div class="st-portfolio-img st-zoom-in">
                     <img
-                      src="assets/img/portfolio/portfolio1.jpg"
+                      src="assets/img/hanzi_flashcard_pic.png"
                       alt="portfolio"
                     />
                   </div>
                   <div class="st-portfolio-item-hover">
                     <i class="fas fa-plus-circle"></i>
-                    <h5>Product Design</h5>
-                    <p>Design / Marketing</p>
+                    <h5>HanziKanji</h5>
+                    <p>Rails and React</p>
                   </div>
                 </a>
               </div>
@@ -778,19 +778,19 @@
             <div class="st-portfolio-single st-style1 st-lightgallery">
               <div class="st-portfolio-item">
                 <a
-                  href="assets/img/portfolio/portfolio2_lg.jpg"
+                  href="assets/img/hanzilist_square.png"
                   class="st-portfolio st-zoom st-lightbox-item"
                 >
                   <div class="st-portfolio-img st-zoom-in">
                     <img
-                      src="assets/img/portfolio/portfolio2.jpg"
+                      src="assets/img/hanzi_list_pic.png"
                       alt="portfolio"
                     />
                   </div>
                   <div class="st-portfolio-item-hover">
                     <i class="fas fa-plus-circle"></i>
-                    <h5>Product Design</h5>
-                    <p>Design / Marketing</p>
+                    <h5>HanziKanji</h5>
+                    <p>Rails and React</p>
                   </div>
                 </a>
               </div>
@@ -800,19 +800,19 @@
             <div class="st-portfolio-single st-style1 st-lightgallery">
               <div class="st-portfolio-item">
                 <a
-                  href="assets/img/portfolio/portfolio3_lg.jpg"
+                  href="assets/img/splitbuys/splitbuys_expense_square.png"
                   class="st-portfolio st-zoom st-lightbox-item"
                 >
                   <div class="st-portfolio-img st-zoom-in">
                     <img
-                      src="assets/img/portfolio/portfolio3.jpg"
+                      src="assets/img/splitbuys/splitbuys_expense_1123_912.png"
                       alt="portfolio"
                     />
                   </div>
                   <div class="st-portfolio-item-hover">
                     <i class="fas fa-plus-circle"></i>
-                    <h5>Product Design</h5>
-                    <p>Design / Marketing</p>
+                    <h5>SplitBuys</h5>
+                    <p>Rails and React</p>
                   </div>
                 </a>
               </div>
@@ -822,19 +822,19 @@
             <div class="st-portfolio-single st-style1 st-lightgallery">
               <div class="st-portfolio-item">
                 <a
-                  href="assets/img/portfolio/portfolio4_lg.jpg"
+                  href="assets/img/splitbuys/splitbuys_splash_square.png"
                   class="st-portfolio st-zoom st-lightbox-item"
                 >
                   <div class="st-portfolio-img st-zoom-in">
                     <img
-                      src="assets/img/portfolio/portfolio4.jpg"
+                      src="assets/img/splitbuys/splitbuys_splash_1123_912.png"
                       alt="portfolio"
                     />
                   </div>
                   <div class="st-portfolio-item-hover">
                     <i class="fas fa-plus-circle"></i>
-                    <h5>Product Design</h5>
-                    <p>Design / Marketing</p>
+                    <h5>SplitBuys</h5>
+                    <p>Rails and React</p>
                   </div>
                 </a>
               </div>
@@ -844,19 +844,19 @@
             <div class="st-portfolio-single st-style1 st-lightgallery">
               <div class="st-portfolio-item">
                 <a
-                  href="assets/img/portfolio/portfolio5_lg.jpg"
+                  href="assets/img/learn2math/learn2math_profile_square.png"
                   class="st-portfolio st-zoom st-lightbox-item"
                 >
                   <div class="st-portfolio-img st-zoom-in">
                     <img
-                      src="assets/img/portfolio/portfolio5.jpg"
+                      src="assets/img/learn2math/learn2math_profile_1123_912.png"
                       alt="portfolio"
                     />
                   </div>
                   <div class="st-portfolio-item-hover">
                     <i class="fas fa-plus-circle"></i>
-                    <h5>Product Design</h5>
-                    <p>Design / Marketing</p>
+                    <h5>Learn2Math</h5>
+                    <p>React / Node / MongoDB</p>
                   </div>
                 </a>
               </div>
@@ -866,29 +866,73 @@
             <div class="st-portfolio-single st-style1 st-lightgallery">
               <div class="st-portfolio-item">
                 <a
-                  href="assets/img/portfolio/portfolio6_lg.jpg"
+                  href="assets/img/learn2math/learn2math_quiz_square.png"
                   class="st-portfolio st-zoom st-lightbox-item"
                 >
                   <div class="st-portfolio-img st-zoom-in">
                     <img
-                      src="assets/img/portfolio/portfolio6.jpg"
+                      src="assets/img/learn2math/learn2math_quiz_1123_912.png"
                       alt="portfolio"
                     />
                   </div>
                   <div class="st-portfolio-item-hover">
                     <i class="fas fa-plus-circle"></i>
-                    <h5>Product Design</h5>
-                    <p>Design / Marketing</p>
+                    <h5>Learn2Match</h5>
+                    <p>React / Node / MongoDB</p>
                   </div>
                 </a>
               </div>
             </div>
           </div>
-          <div class="col-lg-12 text-center">
+               <div class="col-lg-4 col-md-6">
+            <div class="st-portfolio-single st-style1 st-lightgallery">
+              <div class="st-portfolio-item">
+                <a
+                  href="assets/img/cryptolio/cryptolio_search_square.png"
+                  class="st-portfolio st-zoom st-lightbox-item"
+                >
+                  <div class="st-portfolio-img st-zoom-in">
+                    <img
+                      src="assets/img/cryptolio/cryptolio_search_1123_912.png"
+                      alt="portfolio"
+                    />
+                  </div>
+                  <div class="st-portfolio-item-hover">
+                    <i class="fas fa-plus-circle"></i>
+                    <h5>Cryptolio</h5>
+                    <p>Vanilla Javascript</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+               <div class="col-lg-4 col-md-6">
+            <div class="st-portfolio-single st-style1 st-lightgallery">
+              <div class="st-portfolio-item">
+                <a
+                  href="assets/img/cryptolio/cryptolio_table_square.png"
+                  class="st-portfolio st-zoom st-lightbox-item"
+                >
+                  <div class="st-portfolio-img st-zoom-in">
+                    <img
+                      src="assets/img/cryptolio/cryptolio_table_1123_912.png"
+                      alt="portfolio"
+                    />
+                  </div>
+                  <div class="st-portfolio-item-hover">
+                    <i class="fas fa-plus-circle"></i>
+                    <h5>Cryptolio</h5>
+                    <p>Vanilla Javascript</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col-lg-12 text-center">
             <div class="st-portfolio-btn">
               <a href="#" class="st-btn st-style1 st-color1">Load More</a>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="st-height-b100 st-height-lg-b80"></div>
