--- a/index.html
+++ b/index.html
@@ -1476,7 +1476,7 @@
     <!-- End Contact Seciton -->
 
     <!-- Start Footer Seciton -->
-    <footer>
+    <!-- <footer>
       <div class="container">
         <div class="st-copyright-wrap text-center">
           <div class="st-copyright-text">
@@ -1484,7 +1484,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!-- End Footer Seciton -->
 
     <!-- Scripts -->
