--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="author" content="Laralink" />
+    <meta name="author" content="Dominic Swaby" />
     <!-- Page Title -->
     <title>Dominic Swaby - Portfolio</title>
     <!-- Favicon Icon -->
