add links to life sites

--- a/index.html
+++ b/index.html
@@ -1161,12 +1161,12 @@
     <!-- End Review Seciton -->
 
     <!-- Start Blog Seciton -->
-    <!-- <section id="blog">
+    <section id="blog">
       <div class="st-height-b100 st-height-lg-b80"></div>
       <div class="container">
         <div class="st-section-heading st-style1">
-          <h4 class="st-section-heading-title">BLOG</h4>
-          <h2 class="st-section-heading-subtitle">LATEST NEWS</h2>
+          <h4 class="st-section-heading-title">Visit Live Sites</h4>
+          <!-- <h2 class="st-section-heading-subtitle">LATEST NEWS</h2> -->
         </div>
         <div class="st-height-b25 st-height-lg-b25"></div>
       </div>
@@ -1190,9 +1190,9 @@
             <div class="slick-wrapper">
               <div class="slick-slide-in">
                 <div class="st-post-single st-style1">
-                  <a href="blog-details.html" class="st-post-thumb st-zoom">
+                  <a href="https://splitbuys.herokuapp.com/" target="_blank" class="st-post-thumb st-zoom">
                     <img
-                      src="assets/img/blog/blog1.jpg"
+                      src="assets/img/splitbuys/splitbuys_splash_square.png"
                       class="st-zoom-in"
                       alt="blog1"
                     />
@@ -1200,14 +1200,13 @@
                   <div class="st-post-info">
                     <div class="st-post-date">
                       By:
-                      <a href="#" class="st-post-author">Admin</a>
-                      <span class="st-post-date-divider">|</span>
-                      <span class="st-post-publish-date">27-09-2020</span>
+                      <a href="#" class="st-post-author">Dominic Swaby</a>
+                      <span class="st-post-date-divider"></span>
+                      <span class="st-post-publish-date"></span>
                     </div>
                     <h4 class="st-post-title">
                       <a href="blog-details.html"
-                        >What are the latest trends in Graphic design according
-                        to you?</a
+                        >SplitBuys</a
                       >
                     </h4>
                   </div>
@@ -1215,9 +1214,9 @@
               </div>
               <div class="slick-slide-in">
                 <div class="st-post-single st-style1">
-                  <a href="blog-details.html" class="st-post-thumb st-zoom">
+                  <a href="https://hanzikanji.com/" target="_blank" class="st-post-thumb st-zoom">
                     <img
-                      src="assets/img/blog/blog2.jpg"
+                      src="assets/img/hanzi_flashcard_square.png"
                       class="st-zoom-in"
                       alt="blog2"
                     />
@@ -1225,13 +1224,13 @@
                   <div class="st-post-info">
                     <div class="st-post-date">
                       By:
-                      <a href="#" class="st-post-author">Admin</a>
-                      <span class="st-post-date-divider">|</span>
-                      <span class="st-post-publish-date">27-09-2020</span>
+                      <a href="#" class="st-post-author">Dominic Swaby</a>
+                      <span class="st-post-date-divider"></span>
+                      <span class="st-post-publish-date"></span>
                     </div>
                     <h4 class="st-post-title">
                       <a href="blog-details.html"
-                        >What do you think makes someone a good designer?</a
+                        >HanziKanji</a
                       >
                     </h4>
                   </div>
@@ -1239,9 +1238,9 @@
               </div>
               <div class="slick-slide-in">
                 <div class="st-post-single st-style1">
-                  <a href="blog-details.html" class="st-post-thumb st-zoom">
+                  <a href="https://learn2math.herokuapp.com/#/" class="st-post-thumb st-zoom">
                     <img
-                      src="assets/img/blog/blog3.jpg"
+                      src="assets/img/learn2math/learn2math_quiz_square.png"
                       class="st-zoom-in"
                       alt="blog3"
                     />
@@ -1249,13 +1248,13 @@
                   <div class="st-post-info">
                     <div class="st-post-date">
                       By:
-                      <a href="#" class="st-post-author">Admin</a>
-                      <span class="st-post-date-divider">|</span>
-                      <span class="st-post-publish-date">27-09-2020</span>
+                      <a href="#" class="st-post-author">Dominic Swaby</a>
+                      <span class="st-post-date-divider"></span>
+                      <span class="st-post-publish-date"></span>
                     </div>
                     <h4 class="st-post-title">
                       <a href="blog-details.html"
-                        >Were there any mistakes you’ve made as a designer</a
+                        >Learn2Math</a
                       >
                     </h4>
                   </div>
@@ -1340,7 +1339,7 @@
         </div>
       </div>
       <div class="st-height-b95 st-height-lg-b75"></div>
-    </section> -->
+    </section>
     <!-- End Blog Seciton -->
 
     <!-- Start Contact Seciton -->
